# django5-inline-actions

./: .pypirc  CHANGELOG.md  pyproject.toml  setup.cfg  setup.py  tox.ini
