[tool.poetry]
name = "django4-inline-actions"
version = "2.1"
description = "django4-inline-actions adds actions to each row of the ModelAdmin or InlineModelAdmin."
authors = [
    "Alexander Frenzel <alex@relatedworks.com>",
    "FENG Hao <hiroshifuu@outlook.com>",
]

license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://github.com/HiroshiFuu/django4-inline-actions/blob/master/README.md"
homepage = "https://github.com/HiroshiFuu/django4-inline-actions"
repository = "https://github.com/HiroshiFuu/django4-inline-actions"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "inline_actions" },
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
django = ">=3.0, <5.3"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
better-exceptions = "^0.3.2"
black = "^24.8.0"
django-webtest = "^1.9"
flake8 = "^7.1.2"
flake8-bugbear = "^24.10.31"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-debugger = "^4.1.2"
isort = "^5.5.2"
lxml = "^5.3.2"
mypy = "^0.971"
pdbpp = "^0.11.5"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-django = "^3.4"
pytest-mock = "^3.3.1"
tox = "^3.20.0"
tox-gh-actions = "^1.3.0"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
